--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="profile-image">
-                            <img src="img/9.jpg" alt="">
+                            <img src="img/20161001172810_RaUhB.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12">
