--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="container">
                             <div class="col-md-offset-2 col-md-8 col-sm-12">
                                 <h2>或许是梦的缘故，流离之人追逐幻影</h2>
-                                <p><strong><span class="green">Hello,</span><span class="yellow">sunshine</span></strong>欢迎来到黑龙哥的小世界。好好生活，好好去爱</p>
+                                <p><strong><span class="green">Hello,</span><span class="yellow"></span></strong>欢迎来到黑龙哥的小世界。好好生活，好好去爱</p>
                                 <a href="#about" class="button default">See more</a>
                             </div>
                         </div>
@@ -176,11 +176,13 @@
             <div class="container">
                 <div class="row page-heading">
                     <div class="col-md-8 col-sm-8">
+                        <div class="lilin">
                         <h3 class="page-title">我的作品</h3>
                         <p class="page-subtitle">Some of the works I have done</p>
+                        </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 hidden-xs text-right">
-                        <p class="page-icon"><i class="fa fa-camera"></i></p>
+                    <div class="col-md-4 col-sm-4 hidden-xs text-right  xinde">
+                        <a href="https://zhaosiqi.github.io/work/" class="btn btn-warning ">更多</a>
                     </div>
                 </div>
                 <div class="row">
